<resources>
    <string name="app_name">TiendaOnline</string>
    <string name="placeholder_search">Buscar Producto</string>
    <string name="alt_lupa">Icono lupa para la barra de busqueda</string>
    <string name="alt_carrito">Icono Carrito de compras</string>
    <string name="alt_contacto">Icono de contactanos</string>
    <string name="alt_user">Icono de usuario</string>
    <string name="alt_setting">Icono de las configuraciones</string>
    <string name="alt_logo">Logo de la empresa Autoservicio Popular</string>
    <string name="alt_banner">Imágenes de la tienda</string>
    <string name="alt_coin">Icono moneda</string>
    <string name="company_name_1">Autoservicio</string>
    <string name="company_name_2">Popular</string>
    <string name="company_slogan">Autoservio Popular Calidad y economía a su alcance</string>
    <string name="home_text_intro">Descubre los mejores productos para tu hogar al mejor precio, con la calidad, variedad y servicio que solo nosotros te podemos ofrecer</string>
    <string name="home_text_products">No te puedes perder nuestra selección de los productos más comprados por nuestros clientes, que incluye desde alimentos y bebidas hasta artículos de limpieza e higiene. Todos ellos de la mejor calidad y con la garantía de nuestra tienda</string>
    <string name="home_text_points">Aprovecha nuestro sistema de puntos y canjea los mejores productos por tu fidelidad. Regístrate y empieza a acumular puntos con cada compra que hagas</string>
    <string name="home_subtitle_products">Productos</string>
    <string name="home_subtitle_points">Puntos fidelidad</string>
    <string name="shoppingcart_subtitle">Productos en el carro de compras</string>
    <string name="shoppingcart_button_buy">Realizar compra</string>
    <string name="shoppingcart_table_text_1">Nombre</string>
    <string name="shoppingcart_table_text_2">Cantidad</string>
    <string name="shoppingcart_table_text_3">Precio</string>
    <string name="shoppingcart_table_text_4">Total:</string>
    <string name="login_title">Iniciar Sesión</string>
    <string name="login_placeholder_email">Correo Electrónico</string>
    <string name="login_placeholder_pass">Contraseña</string>
    <string name="login_button">Ingresar</string>
    <string name="login_link_1">Olvidé mi contraseña</string>
    <string name="login_link_2">Registrarse</string>
    <string name="reg_title">Registrarse</string>
    <string name="reg_subtitle_1">Información Personal</string>
    <string name="reg_subtitle_2">Datos de contacto</string>
    <string name="reg_subtitle_3">Credenciales</string>
    <string name="reg_placeholder_1">Nombre</string>
    <string name="reg_placeholder_2">Apellido</string>
    <string name="reg_placeholder_3">Número de identificación</string>
    <string name="reg_placeholder_4">Teléfono</string>
    <string name="reg_placeholder_5">Dirección</string>
    <string name="reg_placeholder_6">Ciudad</string>
    <string name="reg_placeholder_7">Correo electrónico</string>
    <string name="reg_placeholder_8">Contraseña</string>
    <string name="reg_button">Siguiente</string>
    <string name="product_title">Detalles del producto</string>
    <string name="product_subtitle">Característica pricipales:</string>
    <string name="product_text_1">Cantidad</string>
    <string name="product_right_arrow">▶</string>
    <string name="product_left_arrow">◀</string>
</resources>