<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".RegistrarActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:layout_margin="20sp"
            android:contentDescription="@string/alt_logo"
            app:srcCompat="@drawable/icono_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50sp"
            android:layout_marginRight="50sp"
            android:text="@string/company_slogan"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40sp"
            android:background="#302F2F"
            android:orientation="vertical"
            android:padding="20sp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:text="@string/reg_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6sp"
                android:text="@string/reg_subtitle_1"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:ems="10"
                android:hint="@string/reg_placeholder_1"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/very_light_gray" />

            <EditText
                android:id="@+id/input_surname"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:ems="10"
                android:hint="@string/reg_placeholder_2"
                android:inputType="date"
                android:textColor="@color/white"
                android:textColorHint="@color/very_light_gray" />

            <EditText
                android:id="@+id/input_id"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:ems="10"
                android:hint="@string/reg_placeholder_3"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/very_light_gray" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6sp"
                android:layout_marginBottom="6sp"
                android:text="@string/reg_subtitle_2"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_tel"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:ems="10"
                android:hint="@string/reg_placeholder_4"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/very_light_gray" />

            <EditText
                android:id="@+id/input_address"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:ems="10"
                android:hint="@string/reg_placeholder_5"
                android:inputType="phone"
                android:textColor="@color/white"
                android:textColorHint="@color/very_light_gray" />

            <EditText
                android:id="@+id/input_city"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:ems="10"
                android:hint="@string/reg_placeholder_6"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/very_light_gray" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6sp"
                android:layout_marginBottom="6sp"
                android:text="@string/reg_subtitle_3"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:ems="10"
                android:hint="@string/reg_placeholder_7"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/very_light_gray" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:ems="10"
                android:hint="@string/reg_placeholder_8"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/very_light_gray" />

            <Button
                android:id="@+id/button_next"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:layout_marginTop="10sp"
                android:backgroundTint="#4E4D4D"
                android:text="@string/reg_button"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>