<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_weight="1"
        android:background="@color/red"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:contentDescription="@string/alt_logo"
            app:srcCompat="@drawable/icono_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/company_name_1"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/text_titulo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/company_name_2"
                android:textColor="@color/white"
                android:textSize="32sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/buscador"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="5sp"
            android:layout_weight="1"
            android:background="@drawable/border_radius_white"
            android:ems="10"
            android:hint="@string/placeholder_search"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/light_grey" />

        <ImageView
            android:id="@+id/button_lupa"
            android:layout_width="24sp"
            android:layout_height="48dp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="5sp"
            android:layout_weight="1"
            android:background="@drawable/border_radius_white"
            android:contentDescription="@string/alt_lupa"
            app:srcCompat="@drawable/icono_lupa"
            tools:padding="8sp" />

        <ImageView
            android:id="@+id/icono_carrito"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:contentDescription="@string/alt_carrito"
            app:srcCompat="@drawable/icono_carriro_de_compras" />
    </LinearLayout>

</LinearLayout>