<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="294dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEnd0f="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTop0f="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:layout_margin="20sp"
            android:contentDescription="@string/alt_logo"
            app:srcCompat="@drawable/icono_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:layout_marginRight="25sp"
            android:text="@string/company_slogan"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40sp"
            android:background="@drawable/border_radius_night_rider"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:layout_marginBottom="30sp"
                android:text="@string/login_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10sp"
                android:background="@drawable/border_radius_white"
                android:ems="10"
                android:hint="@string/login_placeholder_email"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/light_grey" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10sp"
                android:background="@drawable/border_radius_white"
                android:ems="10"
                android:hint="@string/login_placeholder_pass"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/light_grey" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:backgroundTint="#4E4D4D"
                android:text="@string/login_button"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/login_link_1"
                android:textAlignment="center"
                android:textColor="@color/Sonic_Silver"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/link_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_link_2"
                android:textAlignment="center"
                android:textColor="@color/Sonic_Silver"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>