<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Eerie_Black"
    tools:context=".ProductoActivity">
    <LinearLayout
        android:id="@+id/option_search"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEnd0f="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_app_bar">

        <EditText
            android:id="@+id/buscador"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="5sp"
            android:layout_weight="1"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/placeholder_search"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/light_grey" />

        <ImageView
            android:id="@+id/button_lupa"
            android:layout_width="44sp"
            android:layout_height="48dp"
            android:layout_marginTop="5sp"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/alt_lupa"
            android:padding="5sp"
            app:srcCompat="@drawable/icono_lupa" />

        <ImageView
            android:id="@+id/icono_carrito"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:contentDescription="@string/alt_carrito"
            app:srcCompat="@drawable/icono_carriro_de_compras" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/botton_app_bar"
        android:layout_width="wrap_content"
        android:layout_height="82dp"
        android:background="#DC1212"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottom0f="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEnd0f="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:contentDescription="@string/alt_contacto"
            app:srcCompat="@drawable/icono_contactanos" />

        <ImageView
            android:id="@+id/icono_user"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:contentDescription="@string/alt_user"
            app:srcCompat="@drawable/icono_usuario" />

        <ImageView
            android:id="@+id/icono_setting"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:contentDescription="@string/alt_setting"
            app:srcCompat="@drawable/icono_ajustes" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/top_app_bar"
        android:layout_width="0dp"
        android:layout_height="88dp"
        android:background="#DC1212"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTop0f="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:contentDescription="@string/alt_logo"
            app:srcCompat="@drawable/icono_logo"
            tools:srcCompat="@drawable/icono_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/company_name_1"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/text_titulo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/company_name_2"
                android:textColor="@color/white"
                android:textSize="32sp" />
        </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/botton_app_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option_search">
        <LinearLayout
            android:id="@+id/layout_detalles_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/botton_app_bar"
            app:layout_constraintEnd_toEnd0f="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option_search">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/product_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="250sp"
                android:contentDescription="Representación gráfica del producto" />
            <TextView
                android:id="@+id/text_nombre_producto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Chocolatina surtida Jet X 144g"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/text_precio_producto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Precio: $9.590"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/text_unidades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="Unidades diponibles: 10"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:layout_marginTop="12sp"
                android:layout_marginBottom="12sp"
                app:layout_constraintEnd_toEnd0f="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/product_text_1"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEnd0f="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTop0f="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottom0f="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEnd0f="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <Button
                        android:id="@+id/button_cantidad_left"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/red"
                        android:text="@string/product_left_arrow"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/text_cantidad"
                        android:layout_width="60sp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10sp"
                        android:layout_marginRight="10sp"
                        android:layout_weight="1"
                        android:text="1"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="32sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button_cantidad_right"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:backgroundTint="@color/red"
                        android:text="@string/product_right_arrow"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/text_subtitulo_producto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="5sp"
                android:text="@string/product_subtitle"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/text_detalles_producto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:text="24 unidades de chocolate surtido sabor a mora, arequipe..."
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>